# prometheus-ecs-discoverer

./: .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .releaserc.json  .yamllint.yaml  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  discovery.txt  output.txt  pyproject.toml  requirements.txt  run.sh
.github/workflows/: docs.yml  main.yaml  pdoc3.yml  release.yml  test-branches.yml
docs/: caching.html  discovery.html  fetching.html  index.html  marshalling.html  prometheus_ecs_discoverer.html  run.html  telemetry.html  toolbox.html
docs/prometheus_ecs_discoverer/: caching.html  discovery.html  fetching.html  main.html  marshalling.html  telemetry.html  toolbox.html
documents/: aws-iam-policy.json  dashboard-PromED-Alerting.json  dashboard-PromED-HighR.json  dashboard-PromED-LowR.json  dashboard-PromED.json  dashboard.json
pdoc3/: fetching.html  toolbox.html
prometheus_ecs_discoverer/: __init__.py  app.py  caching.py  conf.py  discovery.py  fetching.py  main.py  marshalling.py  run.py  settings.py  settings.toml  telemetry.py  toolbox.py
prometheus_ecs_discoverer/settings/: settings.toml
tests/: conftest.py  test_caching.py  test_conf.py  test_discovery.py  test_discovery_integration.py  test_discovery_integration_data.py  test_fetching.py  test_marshalling.py  test_telemetry.py  test_toolbox.py
