[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "prometheus-ecs-discoverer"
version = "3.2.1"
description = "Prometheus Service Discovery for AWS ECS"
authors = ["Tim Schwenke <tim.and.trallnag+promed@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/trallnag/prometheus-ecs-discoverer"
keywords = ["prometheus", "discovery", "aws", "ecs", "metrics"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: System :: Monitoring',
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.14.23"
prometheus-client = "^0.8.0"
loguru = "^0.5.1"
prettyprinter = "^0.18.0"
dynaconf = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6"
flake8 = "^3"
black = "^20.8b1"
requests = "^2"
pytest-cov = "^2"
moto = "^1"
rope = "^0.17"
isort = "^5"
pdoc3 = "^0.9"

[tool.black]
line-length = 90
exclude = "tests/test_discovery_integration_data.py"
