[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "prometheus-ecs-discoverer"
version = "3.3.3"
description = "Prometheus Service Discovery for AWS ECS"
authors = ["Tim Schwenke <tim.and.trallnag+code@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/trallnag/prometheus-ecs-discoverer"
keywords = ["prometheus", "discovery", "aws", "ecs", "metrics"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.16.00"
prometheus-client = "^0.8.0"
loguru = "^0.5.3"
prettyprinter = "^0.18.0"
dynaconf = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
flake8 = "^3.8"
black = "^20.8b1"
requests = "^2.24"
pytest-cov = "^2.10"
moto = "^1.3"
rope = "^0.17"
isort = "^5.6"
pdoc3 = "^0.9.1"

[tool.black]
line-length = 90
exclude = "tests/test_discovery_integration_data.py"
