[tool.poetry]
name = "prometheus-ecs-discoverer"
version = "3.3.3"
description = "Prometheus Service Discovery for AWS ECS"
authors = ["Tim Schwenke <tim.schwenke@trallnag.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/trallnag/prometheus-ecs-discoverer"
keywords = ["prometheus", "aws", "ecs", "metrics"]

[tool.poetry.dependencies]
python = "^3.9"

boto3 = "^1.16.00"
dynaconf = "^3.1.2"
loguru = "^0.5.3"
prettyprinter = "^0.18.0"
prometheus-client = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
moto = "^2.2.2"
mypy = "^0.910"
pdoc = "^7.4.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
requests = "^2.26.0"
types-python-dateutil = "^0.1.6"

[tool.black]
line-length = 90

exclude = "tests/test_discovery_integration_data.py"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
scripts_are_modules = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

exclude = """
(?x)(
    test_discovery_integration_data.py
)
"""

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "moto.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
